Update home page dev description

--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
         <span>Hello</span>
         <p id="a-bit-about-me-text">A Bit About Me</p>
         <p id="hello-box-text-brief">
-          Hi y'all, I'm Teddy. I'm a developer who loves challenges and likes to
-          bring value in my way in solving some issues. That may explain my
-          appreciation for coding somehow, hehe. Here are some details about my
-          work. Check it and let me hear from you ?
+          Hi, I'm Teddy. I'm an engineer who loves challenges and likes to
+          bring value in solving real life issues. Here are some details about my
+          work. Feel free to check it and let's connect
         </p>
         <div class="buttons-flex-layout">
           <form action="src/resume/resume.html">
