update date year

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <i class="fa-brands fa-twitter"></i>
       </div>
       <div class="col-3" id="copyright">
-        © 2023 By Teddy Aballo. <br />
+        &copy; 2024 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
         Proudly created with skills.com
       </div>
     </footer>
