--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
       </div>
       <div class="col-3" id="email-text">
         <h3>Email</h3>
-        <p>aaronpromail@gmail.com</p>
+        <a href="mailto:aaronpromail@gmail.com" title="email"><p>aaronpromail@gmail.com</p></a>
       </div>
       <div class="col-3" id="follow-me">
         <h3>Follow Me</h3>
         <!-- icons -->
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="https://www.linkedin.com/in/teddy-aballo/">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/aaronted009">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </div>
       <div class="col-3" id="copyright">
         &copy; 2024 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
