update footer on contact, projects & resume pages

--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -121,17 +121,20 @@
       </div>
       <div class="col-3" id="email-text">
         <h3>Email</h3>
-        <p>aaronpromail@gmail.com</p>
+        <a href="mailto:aaronpromail@gmail.com" title="email"><p>aaronpromail@gmail.com</p></a>
       </div>
       <div class="col-3" id="follow-me">
         <h3>Follow Me</h3>
         <!-- icons -->
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-twitter"></i>
+        <a href="https://www.linkedin.com/in/teddy-aballo/">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/aaronted009">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </div>
       <div class="col-3" id="copyright">
-        © 2023 By Teddy Aballo. <br />
-        Proudly created with skills.com
+        &copy; 2024 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
       </div>
     </footer>
   </body>
