--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <title>Projects | CV</title>
+    <title>🛠 Projects</title>
   </head>
   <body>
 
