--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <title>Resume | CV</title>
+    <title>💼 Resume</title>
   </head>
   <body>
     <header class="header">
