update project link

--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -85,7 +85,7 @@
             <p>
               I created a website showing what that candidate can bring to this
               company.
-              <a href="mahamataware.com" title="Mahamat Aware website">Mahamat Aware - ASECNA</a>.
+              <a href="https://www.mahamataware.com" target="_blank" title="Mahamat Aware website">Mahamat Aware - ASECNA</a>.
             </p>
           </div>
         </div>
