--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -69,7 +69,7 @@
       </div>
       <div class="contact-form-details">
         <br />
-        <form class="grid-form" action="">
+        <form class="grid-form" id="contactForm" method="post">
           <div>
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="fname" />
@@ -82,7 +82,7 @@
           <!-- <br /> -->
           <div>
             <label for="email">Email *</label>
-            <input type="text" id="email" name="email" required />
+            <input type="email" id="email" name="email" required />
           </div>
           <div>
             <label for="subject">Subject</label>
@@ -99,6 +99,7 @@
               rows="10"
             ></textarea>
           </div>
+          <div id="responseMessage"></div>
           <div class="submit-button">
             <button
               class="stylized-button"
@@ -138,4 +139,5 @@
       </div>
     </footer>
   </body>
+  <script src="../../assets/scripts/script.js"></script>
 </html>
