--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -57,6 +57,24 @@
       <div class="projects-content-section">
         <div class="projects-content-section-text-details">
           <div class="projects-content-section-title">
+            <h2>A website improvement proposition to a personal developement business.</h2>
+          </div>
+
+          <div class="projects-content-section-summary">
+            <p>
+              This is a project made in order to improve an existing website.
+            </p>
+          </div>
+        </div>
+
+        <div class="projects-content-section-image">
+          <img src="../../assets/images/dev-perso-website.png" title="Développement perso club" alt="" />
+        </div>
+      </div>
+
+      <div class="projects-content-section">
+        <div class="projects-content-section-text-details">
+          <div class="projects-content-section-title">
             <h2>EOT (End Of Training) Crossroads</h2>
           </div>
 
@@ -91,7 +109,7 @@
         </div>
 
         <div class="projects-content-section-image">
-          <img src="../../assets/images/plane.jpg" title="Mahamat AWARE - ASECNA" alt="" />
+          <img src="../../assets/images/mahamat-asecna.png" title="Mahamat AWARE - ASECNA" alt="" />
         </div>
       </div>
 
@@ -111,6 +129,24 @@
 
         <div class="projects-content-section-image">
           <img src="../../assets/images/suites.jpg" title="Bénin Location" alt="" />
+        </div>
+      </div>
+
+      <div class="projects-content-section">
+        <div class="projects-content-section-text-details">
+          <div class="projects-content-section-title">
+            <h2>🎶</h2>
+          </div>
+
+          <div class="projects-content-section-summary">
+            <p>
+              <i>In the making. Stay tuned ;)</i>
+            </p>
+          </div>
+        </div>
+
+        <div class="projects-content-section-image">
+          <img src="../../assets/images/website-coming-soon.jpg" title="Bénin Location" alt="" />
         </div>
       </div>
     </div>
