--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -64,6 +64,22 @@
         <div class="resume-content-section-details">
           <div class="resume-content-section-details-element">
             <div class="resume-content-section-details-element-period">
+              2022 - 2024
+            </div>
+            <div class="resume-content-section-details-element-infos">
+              <h3>Intern at <a href="https://www.trellix.io/" target="_blank">Trellix</a></h3>
+              <br /><br />
+              <p>
+                At Trellix, a SaaS company, I learned more software engineering
+                better practices, proper ways of collaborating and shipping code.
+                I worked on the software product maintenance, new features and
+                started open source contribution as well.
+              </p>
+            </div>
+          </div>
+
+          <div class="resume-content-section-details-element">
+            <div class="resume-content-section-details-element-period">
               2019 - 2021
             </div>
             <div class="resume-content-section-details-element-infos">
@@ -88,9 +104,9 @@
               <p>
                 That was the first internship, an academic one. Regarding the
                 activities of the company: I've watched and learned how to do a
-                maintenance on a server. I've installed the Ethernet cable for a
+                maintenance on a server. I've installed Ethernet cable for
                 network at MTN Bénin. I've helped install some IT equipments at
-                Seme City, the innovation tech city in Benin.
+                Sèmè City, the innovation tech city in Benin.
               </p>
             </div>
           </div>
@@ -166,8 +182,8 @@
               <ul>
                 <li>Laravel.</li>
                 <li>Bootstrap.</li>
-                <li>WorPress.</li>
-                <li>Python.</li>
+                <li>WordPress.</li>
+                <li>Python (FastApi, Django).</li>
               </ul>
             </div>
           </div>
