--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -135,18 +135,18 @@
       <div class="projects-content-section">
         <div class="projects-content-section-text-details">
           <div class="projects-content-section-title">
-            <h2>🎶</h2>
+            <h2>What to eat today ?</h2>
           </div>
 
           <div class="projects-content-section-summary">
             <p>
-              <i>In the making. Stay tuned ;)</i>
+              Short of ideas? Generate your <a href="https://what-do-we-eat-today-16fg.onrender.com/">next meal</a>.
             </p>
           </div>
         </div>
 
         <div class="projects-content-section-image">
-          <img src="../../assets/images/website-coming-soon.jpg" title="Bénin Location" alt="" />
+          <img src="../../assets/images/what-to-eat-today.png" title="What to eat today ?" alt="" />
         </div>
       </div>
     </div>
