fix typos & update text

--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -57,7 +57,7 @@
       <div class="projects-content-section">
         <div class="projects-content-section-text-details">
           <div class="projects-content-section-title">
-            <h2>A website improvement proposition to a personal developement business.</h2>
+            <h2>A website improvement proposition to a personal development business.</h2>
           </div>
 
           <div class="projects-content-section-summary">
@@ -103,7 +103,7 @@
             <p>
               I created a website showing what that candidate can bring to this
               company.
-              <a href="https://www.mahamataware.com" target="_blank" title="Mahamat Aware website">Mahamat Aware - ASECNA</a>.
+              See <a href="https://www.mahamataware.com" target="_blank" title="Mahamat Aware website">Mahamat Aware - ASECNA</a>.
             </p>
           </div>
         </div>
@@ -140,7 +140,7 @@
 
           <div class="projects-content-section-summary">
             <p>
-              Short of ideas? Generate your <a href="https://what-do-we-eat-today-16fg.onrender.com/">next meal</a>.
+              Short of ideas? Generate your next meal <a href="https://what-do-we-eat-today-16fg.onrender.com/">here</a>.
             </p>
           </div>
         </div>
