add project Festival Adjra

--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -57,6 +57,24 @@
       <div class="projects-content-section">
         <div class="projects-content-section-text-details">
           <div class="projects-content-section-title">
+            <h2>A website for a local cultural festival.</h2>
+          </div>
+
+          <div class="projects-content-section-summary">
+            <p>
+              Check <a href="https://festivaladjra.org/" target="_blank" title="Festival Adjra"> Festival Adjra</a>.
+            </p>
+          </div>
+        </div>
+
+        <div class="projects-content-section-image">
+          <img src="../../assets/images/festival-adjra.png" title="Festival Adjra" alt="" />
+        </div>
+      </div>
+
+      <div class="projects-content-section">
+        <div class="projects-content-section-text-details">
+          <div class="projects-content-section-title">
             <h2>A website improvement proposition to a personal development business.</h2>
           </div>
 
