fix: update image attributes and text content
- correct image title and alt attributes
- refine personal description for clarity

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <img 
             id="hello-box-image-itself" 
             src="assets/images/picture-of-me.jpg" 
-            title="A picture of me :)" 
-            alt="A picture of me :)" 
+            title="A picture of me !" 
+            alt="A picture of me !" 
           />
         </div>
       </div>
@@ -64,8 +64,8 @@
         <span>Hello</span>
         <p id="a-bit-about-me-text">A Bit About Me</p>
         <p id="hello-box-text-brief">
-          Hi, I'm Teddy. I'm an engineer who loves challenges and likes to
-          bring value in solving real life issues. Here are some details about my
+          Hi, I'm Teddy. I'm a software engineer and I like to
+          use my skills to bring value by solving real life issues. Here are some details about my
           work. Feel free to check it and let's connect
         </p>
         <div class="buttons-flex-layout">
