fix: update contact details and font awesome version
- update phone number across multiple pages
- upgrade font awesome to version 6.7.2
- update copyright year to 2025
- add social media links

--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../assets/css/contact.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <title>📩 Contact</title>
   </head>
@@ -60,7 +60,7 @@
         <br />
         <p class="contact-text-details-element-title">Phone</p>
          <!-- <br /> -->
-        <p class="contact-text-details-element-info">+229 67 91 76 20</p>
+        <p class="contact-text-details-element-info">+229 01 67 91 76 20</p>
          <!-- <br /> -->
         <!-- <br /> -->
         <p class="contact-text-details-element-title">Email</p>
@@ -118,7 +118,7 @@
       <hr />
       <div class="col-3" id="phone-text">
         <h3>Phone</h3>
-        <p>+229 67 91 76 20</p>
+        <p>+229 01 67 91 76 20</p>
       </div>
       <div class="col-3" id="email-text">
         <h3>Email</h3>
@@ -133,9 +133,15 @@
         <a href="https://github.com/aaronted009">
           <i class="fa-brands fa-github"></i>
         </a>
+        <a href="https://www.facebook.com/teddy.aballo">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://x.com/_aaronted">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
       </div>
       <div class="col-3" id="copyright">
-        &copy; 2024 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
+        &copy; 2025 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
       </div>
     </footer>
   </body>
