--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <title>👤 Home</title>
   </head>
@@ -86,7 +86,7 @@
       <hr />
       <div class="col-3" id="phone-text">
         <h3>Phone</h3>
-        <p>+229 67 91 76 20</p>
+        <p>+229 01 67 91 76 20</p>
       </div>
       <div class="col-3" id="email-text">
         <h3>Email</h3>
@@ -101,9 +101,15 @@
         <a href="https://github.com/aaronted009">
           <i class="fa-brands fa-github"></i>
         </a>
+        <a href="https://www.facebook.com/teddy.aballo">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://x.com/_aaronted">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
       </div>
       <div class="col-3" id="copyright">
-        &copy; 2024 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
+        &copy; 2025 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
       </div>
     </footer>
   </body>
