fix: update profession title to software engineer
- changed "Developer" to "Software engineer"

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -32,7 +32,7 @@
               >
                 Teddy Aballo
               </a>
-              <p id="resume-author-profession">Developer</p>
+              <p id="resume-author-profession">Software engineer</p>
             </div>
             <label class="hamb" for="side-menu">
               <span class="hamb-line"></span>
