feat: update project descriptions and images
- add egg hunt game
- add image sources for relevant projects
- update order of projects listed
- remove Benin Location project (not much relevant)

--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -57,6 +57,42 @@
       <div class="projects-content-section">
         <div class="projects-content-section-text-details">
           <div class="projects-content-section-title">
+            <h2>Little web app game</h2>
+          </div>
+
+          <div class="projects-content-section-summary">
+            <p>
+              Egg hunt. <a href="https://egghuntfun.vercel.app/">Uncover</a> hidden eggs in the grid.
+            </p>
+          </div>
+        </div>
+
+        <div class="projects-content-section-image">
+          <img src="../../assets/images/egg-hunt-fun.png" title="Egg Hunt Fun" alt="" />
+        </div>
+      </div>
+      
+      <div class="projects-content-section">
+        <div class="projects-content-section-text-details">
+          <div class="projects-content-section-title">
+            <h2>What to eat today ?</h2>
+          </div>
+
+          <div class="projects-content-section-summary">
+            <p>
+              Short of ideas? Generate your next meal <a href="https://what-do-we-eat-today-16fg.onrender.com/">here</a>.
+            </p>
+          </div>
+        </div>
+
+        <div class="projects-content-section-image">
+          <img src="../../assets/images/what-to-eat-today.png" title="What to eat today ?" alt="" />
+        </div>
+      </div>
+      
+      <div class="projects-content-section">
+        <div class="projects-content-section-text-details">
+          <div class="projects-content-section-title">
             <h2>A website for a local cultural festival.</h2>
           </div>
 
@@ -131,42 +167,6 @@
         </div>
       </div>
 
-      <div class="projects-content-section">
-        <div class="projects-content-section-text-details">
-          <div class="projects-content-section-title">
-            <h2>Benin Location</h2>
-          </div>
-
-          <div class="projects-content-section-summary">
-            <p>
-              That project was the first I've worked on at WOROO LAB. This was
-              for a beninese group helping in renting cars and suites.
-            </p>
-          </div>
-        </div>
-
-        <div class="projects-content-section-image">
-          <img src="../../assets/images/suites.jpg" title="Bénin Location" alt="" />
-        </div>
-      </div>
-
-      <div class="projects-content-section">
-        <div class="projects-content-section-text-details">
-          <div class="projects-content-section-title">
-            <h2>What to eat today ?</h2>
-          </div>
-
-          <div class="projects-content-section-summary">
-            <p>
-              Short of ideas? Generate your next meal <a href="https://what-do-we-eat-today-16fg.onrender.com/">here</a>.
-            </p>
-          </div>
-        </div>
-
-        <div class="projects-content-section-image">
-          <img src="../../assets/images/what-to-eat-today.png" title="What to eat today ?" alt="" />
-        </div>
-      </div>
     </div>
 
     <footer class="row">
