feat: update resume and education experiences

--- a/src/resume/resume.html
+++ b/src/resume/resume.html
@@ -40,9 +40,17 @@
             <!-- Menu -->
             <nav class="nav">
               <ul class="menu">
-                <li><a href="../resume/resume.html" title="Resume">Resume</a></li>
-                <li><a href="../projects/projects.html" title="Projects">Projects</a></li>
-                <li><a href="../contact/contact.html" title="Contact">Contact</a></li>
+                <li>
+                  <a href="../resume/resume.html" title="Resume">Resume</a>
+                </li>
+                <li>
+                  <a href="../projects/projects.html" title="Projects"
+                    >Projects</a
+                  >
+                </li>
+                <li>
+                  <a href="../contact/contact.html" title="Contact">Contact</a>
+                </li>
               </ul>
             </nav>
           </div>
@@ -64,16 +72,66 @@
         <div class="resume-content-section-details">
           <div class="resume-content-section-details-element">
             <div class="resume-content-section-details-element-period">
+              2024 - Present
+            </div>
+            <div class="resume-content-section-details-element-infos">
+              <h3>Independent Consultant</h3>
+              <br /><br />
+              <p>
+                As an independent consultant, I develop web applications and
+                AI-powered solutions. I built a RAG (Retrieval Augmented
+                Generation) chatbot using advanced AI techniques, and I create
+                modern, high-performance websites and applications for clients
+                using a variety of frameworks and technologies.
+              </p>
+              <p class="tech-stack">
+                <i
+                  >FastAPI, ReactJS, Next.js, Tailwind CSS, Django, WordPress,
+                  AI, RAG</i
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="resume-content-section-details-element">
+            <div class="resume-content-section-details-element-period">
+              June 2024 - September 2024
+            </div>
+            <div class="resume-content-section-details-element-infos">
+              <h3>Software engineer at TEPLAY</h3>
+              <br /><br />
+              <p>
+                At TEPLAY, I contributed to the development of APIs integrated
+                into a mobile app. I collaborated with the engineering team as
+                team lead, in the development of features.
+              </p>
+              <p class="tech-stack">
+                <i>Django, Django REST framework, Git, GitHub</i>
+              </p>
+            </div>
+          </div>
+
+          <div class="resume-content-section-details-element">
+            <div class="resume-content-section-details-element-period">
               2022 - 2024
             </div>
             <div class="resume-content-section-details-element-infos">
-              <h3>Intern at <a href="https://www.trellix.io/" target="_blank">Trellix</a></h3>
+              <h3>
+                Software engineer at
+                <a href="https://www.trellix.io/" target="_blank">Trellix</a>
+              </h3>
               <br /><br />
               <p>
                 At Trellix, a SaaS company, I learned more software engineering
-                better practices, proper ways of collaborating and shipping code.
-                I worked on the software product maintenance, new features and
-                started open source contribution as well.
+                better practices, proper ways of collaborating and shipping
+                code. It included code reviews, unit testing and CI/CD
+                pipelines. I supervised and contributed to the development of
+                APIs integrated into the SaaS platform. I worked on the software
+                product maintenance, new features and started open source
+                contribution as well.
+              </p>
+              <p class="tech-stack">
+                <i> Python, FastAPI, Pytest, Beanie, MongoDB, Git, GitHub</i>
               </p>
             </div>
           </div>
@@ -83,7 +141,7 @@
               2019 - 2021
             </div>
             <div class="resume-content-section-details-element-infos">
-              <h3>Intern at WOROO LAB</h3>
+              <h3>Web developer at WOROO LAB</h3>
               <br /><br />
               <p>
                 At WOROO LAB, I was helping in a professional internship as a
@@ -91,10 +149,13 @@
                 development and got to have my hands-on on how team work is done
                 in tech company.
               </p>
+              <p class="tech-stack">
+                <i> PHP, Laravel, Bootstrap, Git, Gitlab</i>
+              </p>
             </div>
           </div>
 
-          <div class="resume-content-section-details-element">
+          <!-- <div class="resume-content-section-details-element">
             <div class="resume-content-section-details-element-period">
               2017
             </div>
@@ -109,7 +170,7 @@
                 Sèmè City, the innovation tech city in Benin.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -123,21 +184,29 @@
         <div class="resume-content-section-details">
           <div class="resume-content-section-details-element">
             <div class="resume-content-section-details-element-period">
-              2021 - 2022
+              2025 - 2026
             </div>
             <div class="resume-content-section-details-element-infos">
-              <h3>
-                Institut de Formation et de Recherche en Informatique | Master’s
-                Degree
-              </h3>
+              <h3>Epitech Bénin | Coding Academy</h3>
               <br /><br />
-              <p>Second year of Master's degree in software engineering.</p>
+              <p>Full-stack development & Data/AI certification.</p>
             </div>
           </div>
 
           <div class="resume-content-section-details-element">
             <div class="resume-content-section-details-element-period">
-              2020 - 2021
+              2025
+            </div>
+            <div class="resume-content-section-details-element-infos">
+              <h3>Postman API Certification</h3>
+              <br /><br />
+              <p>Postman Academy.</p>
+            </div>
+          </div>
+
+          <div class="resume-content-section-details-element">
+            <div class="resume-content-section-details-element-period">
+              2020 - 2022
             </div>
             <div class="resume-content-section-details-element-infos">
               <h3>
@@ -145,7 +214,7 @@
                 Degree
               </h3>
               <br /><br />
-              <p>First year of Master's degree in software engineering.</p>
+              <p>Master's degree in software engineering.</p>
             </div>
           </div>
 
@@ -180,10 +249,16 @@
             <div class="resume-content-section-details-element-period"></div>
             <div class="resume-content-section-details-element-infos">
               <ul>
-                <li>Laravel.</li>
+                <li>Python (FastApi, Django, Django REST framework).</li>
+                <li>
+                  Pandas, Kafka, Numpy, Matplotlib, Seaborn, NLTK, TensorFlow,
+                  Keras.
+                </li>
+                <li>Javascript, Typescript (NextJS, ReactJS, NodeJS).</li>
+                <li>PHP (Laravel).</li>
+                <li>Tailwind CSS.</li>
                 <li>Bootstrap.</li>
                 <li>WordPress.</li>
-                <li>Python (FastApi, Django).</li>
               </ul>
             </div>
           </div>
@@ -199,7 +274,9 @@
       </div>
       <div class="col-3" id="email-text">
         <h3>Email</h3>
-        <a href="mailto:aaronpromail@gmail.com" title="email"><p>aaronpromail@gmail.com</p></a>
+        <a href="mailto:aaronpromail@gmail.com" title="email"
+          ><p>aaronpromail@gmail.com</p></a
+        >
       </div>
       <div class="col-3" id="follow-me">
         <h3>Follow Me</h3>
@@ -218,7 +295,8 @@
         </a>
       </div>
       <div class="col-3" id="copyright">
-        &copy; 2025 By Teddy Aballo. <br /> <!--TODO : Update with automatic date year set.-->
+        &copy; 2025 By Teddy Aballo. <br />
+        <!--TODO : Update with automatic date year set.-->
       </div>
     </footer>
   </body>
